application/api-gateway/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: gatemaster
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
          image: umg100/api-gateway:14 # {"$imagepolicy": "flux-system:api-gateway"}
          ports:
            - containerPort: 8081
