application/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: gatemaster
  labels:
    app: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 2
  template:
    metadata:
      name: api-gateway
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
          image: umg100/api-gateway:4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
