application/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: gatemaster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    #nginx.ingress.kubernetes.io/server-snippet: |
    #     rewrite /dify https://innovation-lab.3pillarglobal.com/apps permanent; 


spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.gatemaster.online
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081
  tls:
    - hosts:
        - api-gateway.gatemaster.online
      secretName: star-gatemaster-online
